--- a/Singolo1.html
+++ b/Singolo1.html
@@ -41,7 +41,7 @@
             <div class="services">
                 <div class="container">
                     <h1>Our Services</h1>
-                    <article>
+                    <article class="">
                         Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
                     </article>
                     <div class="features">
