--- a/singolo3.html
+++ b/singolo3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="reset200802.css">
-    <link rel="stylesheet" href="Singolo3.css">
+    <link rel="stylesheet" href="singolo3.css">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <title>Singolo</title>
 </head>
